cmake_minimum_required(VERSION 3.10)

# set the project name
project(Tutorial VERSION 1.0)

# specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# to the source code
configure_file(TutorialConfig.h.in TutorialConfig.h)

# add the MathFunctions library
add_subdirectory(MathFunctions)


# add the executable
# add space line
add_executable(Tutorial tutorial.cxx)



target_include_directories(Tutorial PUBLIC
                           "${PROJECT_BINARY_DIR}"
                           )
